fix text alignment

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -136,7 +136,7 @@
     width: 0;
   }
   to {
-    width: 6rem;
+    width: 6.5rem;
   }
 }
 @keyframes blinkTextCursor {
