--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -45,7 +45,7 @@
     margin-top: 0.5rem;
   }
   &__notes {
-    margin: $mobile-margin auto 0 2rem;
+    margin: $mobile-margin auto 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
